--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         </button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" onclick="setAlgorithm('Astar')">Astar</a></li>
-          <li><a class="dropdown-item" onclick="setAlgorithm('Dijkstradijkstra')">Dijkstra</a></li>
+          <li><a class="dropdown-item" onclick="setAlgorithm('Dijkstra')">Dijkstra</a></li>
           <li><a class="dropdown-item" onclick="setAlgorithm('GBFS')">GBFS</a></li>
         </ul>
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -26,7 +26,7 @@
         </button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" onclick="set_find_node_algorithm('getKNN')">K Nearest Neighbours</a></li>
-          <li><a class="dropdown-item" onclick="setAlgorithm('near_edge_node')">Find Nearest Edge Node</a></li>
+          <li><a class="dropdown-item" onclick="set_find_node_algorithm('near_edge_node')">Find Nearest Edge Node</a></li>
         </ul>
         <button type="button" class="btn btn-success" onclick="setStartPoint()" >Start Point</button>
         <button type="button" class="btn btn-danger" onclick="setEndPoint()">End Point</button>
